2006-11-01  J. Mowery  <jmowery@tresys.com>

	* added ability for avrule and terule queries to search to only types or
	  only attributes for both source and target fields (separate option for
	  each field, default is to search both types and attributes).

	* added apol_get_syn_avrule_by_query() and apol_get_syn_terule_by_query()

2006-10-27  J. Tang  <jtang@tresys.com>

	* added apol_str_appendf() (declared in apol/util.h)

2006-10-27  J. Mowery <jmowery@tresys.com>

	* added make indent to standardize code indentation style

	* indented all .c and .h files with make indent (except sqlite which it skips)

2006-10-25  J. Tang  <jtang@tresys.com>

	* seaudit-report Logwatch script will look for
	$(bindir)/seaudit-report, rather than the hard-coded
	/usr/bin/seaudit-report

2006-10-25 J. Mowery <jmowery@tresys.com>

	* numbered steps for loading

	* loading syntactic rule table is now off by default

	* updated tools requiring line numbers to build syntactic table as needed

2006-10-24  J. Tang  <jtang@tresys.com>

	* exclude the sqlite files from the Doxygen configuration

2006-10-19  J. Tang  <jtang@tresys.com>

	* added lib<foo>_get_version() functions to libqpol, libpoldiff,
	and libsefs

2006-10-17  J. Tang  <jtang@tresys.com>

	* seaudit-report binary was mistakenly called "seaudit_report"

	* Updated man pages to match programs' help files.

2006-10-13  J. Tang  <jtang@tresys.com>

	* Official release of SETools 3.0.